# rf_test

./: .gitignore  README.md  devices.yaml  requirements.txt  rf_test.py
dongle_firmware/: build.sh  prj.conf  rf_test_dongle_nrf52833_dk.hex  rf_test_dongle_nrf52840_dk.hex  rf_test_dongle_nrf52840_dongle.hex
dongle_firmware/src/: main.c
dut_firmware/: CMakeLists.txt  Kconfig  build.sh  prj.conf  sysbuild.cmake
dut_firmware/boards/: nrf52833dk_nrf52820.overlay  nrf52833dk_nrf52833.overlay  nrf52840dk_nrf52811.overlay  nrf52840dk_nrf52840.overlay  nrf52dk_nrf52810.overlay  nrf54l15dk_nrf54l10_cpuapp.overlay  nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay
dut_firmware/rf_test_app_core/: app.overlay
dut_firmware/rf_test_app_core/src/: main.c
dut_firmware/src/: main.c  radio_test.c  radio_test.h
hex/: empty_app_core.hex  nrf52805.hex  nrf52810.hex  nrf52811.hex  nrf52820.hex  nrf52832.hex  nrf52833.hex  nrf52840.hex  nrf5340.hex  nrf54l05.hex  nrf54l10.hex  nrf54l15.hex
src/gui/: gui.py  logic.py
src/gui/qt/: MainWindow.ui  ui_MainWindow.py
src/modules/: automatic_rf_test.py  nrfutil_wrapper.py  pwr_supply.py  rf_test_dongle_api.py  rf_test_exception.py  rns_spectrum.py
